--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Keeler Procurement Suite</title>
+    <title> Procurement Suite</title>
     <script src="https://cdn.plot.ly/plotly-2.24.1.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
-            /* Keeler Branding Colors (Medical/Precision) */
-            --keeler-blue: #009CA6;    /* Teal/Cyan common in medical */
-            --keeler-dark: #004B5A;
+            /*  Branding Colors (Medical/Precision) */
+            --blue: #009CA6;    /* Teal/Cyan common in medical */
+            --dark: #004B5A;
             --text-main: #1e293b;
             --bg-page: #f8fafc;
             --card-bg: #ffffff;
@@ -22,21 +22,21 @@
         .container { max-width: 1100px; margin: 0 auto; padding: 20px; }
 
         /* Header */
-        .header { background: white; border-bottom: 4px solid var(--keeler-blue); padding: 20px; box-shadow: 0 2px 10px rgba(0,0,0,0.05); display: flex; justify-content: space-between; align-items: center; }
+        .header { background: white; border-bottom: 4px solid var(---blue); padding: 20px; box-shadow: 0 2px 10px rgba(0,0,0,0.05); display: flex; justify-content: space-between; align-items: center; }
         .brand { font-size: 1.5rem; font-weight: 800; color: var(--text-main); letter-spacing: -0.5px; }
-        .brand span { color: var(--keeler-blue); }
+        .brand span { color: var(---blue); }
 
         /* Tabs */
         .nav-tabs { display: flex; gap: 10px; margin: 20px 0; background: #e2e8f0; padding: 4px; border-radius: 8px; }
         .tab-btn { flex: 1; border: none; background: none; padding: 12px; font-weight: 600; color: #64748b; cursor: pointer; border-radius: 6px; transition: 0.2s; }
-        .tab-btn.active { background: white; color: var(--keeler-dark); shadow: 0 1px 3px rgba(0,0,0,0.1); }
+        .tab-btn.active { background: white; color: var(---dark); shadow: 0 1px 3px rgba(0,0,0,0.1); }
         .tab-content { display: none; animation: fadeIn 0.3s; }
         .tab-content.active { display: block; }
 
         /* Cards & Grid */
         .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; }
         .card { background: var(--card-bg); padding: 24px; border-radius: var(--radius); border: 1px solid #e2e8f0; box-shadow: 0 4px 6px -1px rgba(0,0,0,0.05); }
-        .card h3 { color: var(--keeler-dark); margin-bottom: 20px; font-size: 1.1rem; display: flex; align-items: center; gap: 8px; }
+        .card h3 { color: var(---dark); margin-bottom: 20px; font-size: 1.1rem; display: flex; align-items: center; gap: 8px; }
 
         /* Inputs */
         .input-group { margin-bottom: 16px; }
@@ -46,7 +46,7 @@
         
         /* Results */
         .metric-box { background: #f0fdFA; border: 1px solid #ccfbf1; padding: 16px; border-radius: 6px; text-align: center; margin-bottom: 10px; }
-        .metric-val { font-size: 1.8rem; font-weight: 800; color: var(--keeler-dark); }
+        .metric-val { font-size: 1.8rem; font-weight: 800; color: var(---dark); }
         .metric-lbl { font-size: 0.8rem; text-transform: uppercase; letter-spacing: 1px; color: #576c79; font-weight: 700; }
 
         @media(max-width: 768px) { .grid { grid-template-columns: 1fr; } }
@@ -56,7 +56,7 @@
 <body>
 
     <div class="header">
-        <div class="brand">KEELER <span>SOURCING</span></div>
+        <div class="brand"> <span>SOURCING</span></div>
         <div style="font-size:0.8rem; font-weight:600; color:#64748b;">Engineering Buyer Toolkit</div>
     </div>
 
@@ -72,7 +72,7 @@
                 <div class="card">
                     <h3><i class="fas fa-calculator"></i> Cost Parameters</h3>
                     
-                    <div style="background:#f8fafc; padding:15px; border-radius:6px; margin-bottom:15px; border-left:4px solid var(--keeler-blue);">
+                    <div style="background:#f8fafc; padding:15px; border-radius:6px; margin-bottom:15px; border-left:4px solid var(---blue);">
                         <strong style="display:block; margin-bottom:10px;">Option A: Make In-House</strong>
                         <div class="input-group">
                             <label class="input-label">Fixed Setup Cost (£)</label>
@@ -104,7 +104,7 @@
                         <div class="metric-val" id="res-breakeven">818</div>
                         <div class="metric-lbl">Break-Even Quantity (Units)</div>
                     </div>
-                    <div id="rec-text" style="text-align:center; font-weight:600; color:var(--keeler-dark);"></div>
+                    <div id="rec-text" style="text-align:center; font-weight:600; color:var(---dark);"></div>
                 </div>
             </div>
         </div>
